--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R: person("Michael D.","Sumner", role = c("aut", "cre"), email =
 Description: Interfaces to GDAL via 'rgdal'. 
 License: GPL-3
 Imports:
+    raster,
     rgdal
 Suggests:
     covr,
